--- a/samples/character/CMakeLists.txt
+++ b/samples/character/CMakeLists.txt
@@ -34,7 +34,7 @@ add_executable(${GAME_NAME} ${EXEC_TYPE}
 
 target_link_libraries(${GAME_NAME} ${GAMEPLAY_LIBRARIES})
 
-if(!${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
     set_target_properties(${GAME_NAME} PROPERTIES
             OUTPUT_NAME "${GAME_NAME}"
@@ -50,6 +50,6 @@ if(!${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
             res/shaders/*
             res/ui/*
             )
-endif(!${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+endif(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 # Just use the PNG config file (most compatible)
 configure_file( game.dxt.config game.config COPYONLY )
